<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical" 
    	android:background="#EEEEEEEE" >

    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/contact_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/contact_address" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/contact_phone" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/contact_email" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/contact_website" />
    
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/hours_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="#000000"
        	android:text="@string/hours_summer_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/hours_summer" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="#000000"
        	android:text="@string/hours_winter_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/hours_winter" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="#000000"
        	android:text="@string/hours_holiday_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/hours_holiday" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/hours_note" />
    
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/admission_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="#000000"
        	android:text="@string/admission_ga_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/admission_ga_rates" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/admission_ga_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="#000000"
        	android:text="@string/admission_tours_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:textStyle="bold"
        	android:text="@string/admission_tours_neigh" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/admission_tours_neigh_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:textStyle="bold"
        	android:text="@string/admission_tours_site" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/admission_tours_site_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/admission_tours_info" />
    
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/policy_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/policy_info" />
    
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/parking_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/parking_info" />
    
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:textColor="#000000"
        	android:text="@string/accessibility_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textColor="#000000"
        	android:text="@string/accessibility_info" />

	</LinearLayout>
</ScrollView>