<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/info_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    
	    <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:text="@string/admission_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:text="@string/admission_ga_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/admission_ga_rates" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/admission_ga_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:text="@string/admission_tours_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textStyle="bold"
        	android:text="@string/admission_tours_neigh" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/admission_tours_neigh_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:textStyle="bold"
        	android:text="@string/admission_tours_site" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/admission_tours_site_info" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/admission_tours_info" />
	    
	</LinearLayout>
</ScrollView>