<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/info_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    
	    <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="22dp"
        	android:text="@string/hours_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:text="@string/hours_summer_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/hours_summer" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:text="@string/hours_winter_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/hours_winter" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:text="@string/hours_holiday_header" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/hours_holiday" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="14dp"
        	android:text="@string/hours_note" />
	    
	</LinearLayout>
</ScrollView>